# frankenstein

./: .gitignore  MEMBER1-HANDOFF.md  Qwen_css_20260623_kt3jpiojv.css  Qwen_html_20260623_xd5vs7hin.html  README.md  SETUP.md  STATUS-2026-06-22-VALIDATION.md  STATUS-FOR-MEMBER1.md  WALKTHROUGH.md  _start.py  process_and_vault.py  pyproject.toml  test_agent.py
.kimchi/ferments/019ef521-b6c2-75b5-9cfb-e604edbfb5a7/docs/: audit_findings.md
examples/: dump_manifest.py  irrigation_manifest.json
frankenstein/: __init__.py  engine.py  foreman.py  llm.py  mocks.py  schema.py  schema.py.engine  schematic.py
frankenstein/agents/: __init__.py  circuit_design.py  inspector.py
frankenstein/verification/: __init__.py  compile_check.py  erc.py  spice.py  z3_check.py
frankenstein/vision/: condition_assessor.py  damage_inference.py  detector.py  local_verifier.py  triage_pipeline.py
frankenstein/vision/api/: demo_data.py  main.py
frankenstein/vision/grounding/: __init__.py  cascade.py  nexar_client.py  ocr_reader.py  rag_fallback.py
frankenstein/vision/vault/: __init__.py  embedder.py  models.py  repository.py
frontend/: app.js  app.js.corrupted_bak  style.css
runs/damage_model/: args.yaml  results.csv
tests/: test_end_to_end.py  test_erc.py  test_foreman.py  test_inspector.py  test_mocks.py  test_schema.py  test_validation.py
uploads/tdn_5945082f/: index.html
