[project]
name = "frankenstein"
version = "0.2.0"
description = "E-Waste upcycling pipeline: vision triage + circuit design from salvaged parts"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7",
    "openai>=1.40",
    "langgraph>=0.2",
    "z3-solver>=4.13",
    "ultralytics>=8.2.0",
    "opencv-python-headless",
    "Pillow",
    "numpy",
    "torch",
    "google-genai",
    "sentence-transformers",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "sqlalchemy>=2.0",
    "requests",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frankenstein"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
